[FIX] html_editor: ensure consistent `::marker` visibility and position
**Problem**:
- `::marker` elements are not properly visible when changing list font size.
- Inconsistencies in marker positioning as `list-style-position` is
  `inside` only when font size changes, but remains `outside` by default.

**Solution**:
As discussed with PO, we will always use `list-style-position: outside`.
To ensure proper visibility for large font sizes, we adjust the
`padding-left` of `ol`.

**Steps to Reproduce**:
1. Add text.
2. Transform text into a centered list.
   - Marker remains left-aligned (default behavior).
3. Change the text font size.
   - **Issue**: Marker moves inside the list, making it inconsistent.
4. Switch a numbered list to an unordered list, then back to numbered.
   - **Issue**: Marker moves out of the viewport.

**opw-4655466**

--- a/addons/html_editor/static/src/main/list/list.scss
+++ b/addons/html_editor/static/src/main/list/list.scss
@@ -2,6 +2,12 @@ li p {
     margin-bottom: 0px;
 }
 
+*[contenteditable="true"] {
+    ol, ul {
+        padding-left: 2rem;
+    }
+}
+
 // Checklist
 ul.o_checklist {
     > li {
